deployment/backend_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-backend
spec:
  type: LoadBalancer
  selector:
    app: student-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: student-backend
      tier: backend
      track: stable
  replicas: 3
  template:
    metadata:
      labels:
        app: student-backend
        tier: backend
        track: stable
    spec:
        containers:
            - name: student-management-backend
              image: "ammartahircs/student-management-backend:latest"
              ports:
                - containerPort: 5000
