deployment/db_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: student-db
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: student-db
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: student-db
        tier: backend
        track: stable
    spec:
      volumes:
          - name: mysql-persistent-storage
            persistentVolumeClaim:
              claimName: mysql-pv-claim
      containers:
        - name: student-management-db
          image: "ammartahircs/student-management-db:latest"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
